# llamaRafaelia

./: CLEANUP_GUIDE.md  CMakeLists.txt  HD_CACHE_IMPLEMENTATION_REPORT.md  LLAMA_RAFAELIA_DESIGN.md  README.md  SMART_GUARD_TESTS.md  SPEC.md  SPEC_SMART_GUARD_V1.md
.github/workflows/: android-abi.yml  assembler-build.yml  build.yml
assember/: README.md
assembler/: .gitignore  Makefile  README.md  build-asm.sh  export-rmrcti-asm.sh
assembler/src/: hello_arm64.S  hello_armv7.S  hello_x86_64.S
common/: CMakeLists.txt  arg.cpp  bitstack_log.cpp  bitstack_log.h  common.cpp  common.h  crc32c.cpp  crc32c.h  smart_guard.cpp  smart_guard.h  stream_audit.cpp  stream_audit.h  synonym_normalizer.cpp  synonym_normalizer.h  witness_model.cpp  witness_model.h  witness_q4.cpp
docs/: BOOSTERS.md  BOOSTERS_PT.md  manifesto_fiat_portal.md
docs/rafaelia/: LICENSING.md  README.md  UPSTREAM_TRACKING.md
docs/rafaelia/design/: RAFAELIA_IMPLEMENTATION.md
docs/rafaelia/reports/: CLEANUP_GUIDE.md
docs/rafaelia/specs/: SPEC_BITSTACK_WORLD_MODEL_V1.md  SPEC_GEOMETRY_NUCLEUS_V1.md  SPEC_RLL_OPERATOR_V1.md
docs/rafaelia/tests/: SMART_GUARD_TESTS.md
examples/llama.android/: README.md
examples/llama.android/app/: build.gradle.kts
examples/llama.android/llama/: build.gradle.kts
examples/llama.android/llama/src/main/cpp/: CMakeLists.txt
examples/model-conversion/: requirements.txt
examples/model-conversion/scripts/causal/: compare-logits.py
examples/model-conversion/scripts/utils/: check-nmse.py  lowlevel_tensor.py  semantic_check.py
models/templates/: README.md  rafaelia-rll.jinja
pocs/witness_q4/: witness_q4.cpp  witness_q4.h
rafaelia-baremetal/: CHANGES.md  CMakeLists.txt  COMPATIBILITY.md  COMPATIBILITY_CHANGELOG.md  LICENSE  README.md  example.c  integration_example.c  test.c
rafaelia-baremetal/bitraf/: raf_bitraf.c  raf_bitraf.h
rafaelia-baremetal/bitstack/: README.md  SUMMARY.md  raf_bitstack.c  raf_bitstack.h  test_bitstack.c
rafaelia-baremetal/core/: raf_core.c  raf_core.h  raf_platform.c  raf_platform.h  raf_system.c  raf_system.h  rafaelia_core.c
rafaelia-baremetal/diagram/: raf_diagram.c  raf_diagram.h
rafaelia-baremetal/docs/: 42_TOOLS.md  API_GUIDE.md  SUMMARY.md  TECHNICAL.md
rafaelia-baremetal/geometry/: raf_geometry.c  raf_geometry.h
rafaelia-baremetal/hardware/: raf_hardware.c  raf_hardware.h
rafaelia-baremetal/include/: rafaelia.h
rafaelia-baremetal/licensing/: raf_licensing.c  raf_licensing.h
rafaelia-baremetal/rafaelia/: README.md  example_rafaelia.c  raf_llama_bridge.c  raf_rafaelia_core.c  raf_rafaelia_core.h  raf_rafaelia_math.c  raf_rafaelia_math.h  raf_rafaelia_vector.c  raf_rafaelia_vector.h
rafaelia-baremetal/rafstore/: HD_CACHE.md  example_hd_cache.c  raf_hd_cache.c  raf_hd_cache.h  raf_rafstore.c  raf_rafstore.h
rafaelia-baremetal/toroid/: raf_toroid.c  raf_toroid.h
rafaelia-baremetal/utils/: raf_utils.c  raf_utils.h
rafaelia-baremetal/zipraf/: raf_zipraf.c  raf_zipraf.h
rmrCti/: OMEGA_COMMAND_TREE.md  README_RUN.txt  RafaFibo.c  analyze_trace.py  antigrav_demo  antigrav_demo.c  build.sh  build_all.sh  build_omega_nav.sh  cognitio_min.c  cognitio_v2_ppm.c  coupled_report.json  gbs.sh  gbs2.c  gbs2.sh  gbs3.c  gbs3.sh  gbs3_color.c  gbs3_color.sh  gbs_bbs.c  hosted_demo  hosted_demo.c  islands.sample.txt  link.ld  omega  omega.bak  omega_cc  omega_conv_stats.jsonl  omega_conv_stats.py  omega_cross_hot.jsonl  omega_cross_hot.py  omega_cross_hot_rank.py  omega_cross_hot_rank.txt  omega_cruise_control.c  omega_emit_pairs_stream.py  omega_events.jsonl  omega_export_docs_summary.json  omega_export_jsonlite_report.md  omega_export_jsonlite_table.csv  omega_export_sample_report.md  (+143 more)
scripts/: debug-test.sh
src/: CMakeLists.txt
tests/: CMakeLists.txt  test-rafstore.cpp  test-smart-guard.cpp  test-synonym-normalizer.cpp
tools/main/: CMakeLists.txt  main.cpp
tools/server/: CMakeLists.txt  server.cpp
tools/server/webui/scripts/: install-git-hooks.sh
tools/server/webui/src/lib/constants/: settings-config.ts
